# whisperx-translate-nas

./: .gitignore  .pdm-python  Dockerfile  README.md  pyproject.toml  requirements.txt  whisperx_batch_transcriber.py
